# slowlibs

./: .clang-tidy  meson.build
doc/: chacha.md
include/slowlibs/: chacha20.h
src/slowcrypt/: balloon_kchacha.c  chacha20.c  cli-slowcrypt.c
tests/chacha20/: balloon.c  balloon_unpadded.c  kchacha_unpadded.c  kchacha_unpadded2.c
webchapow/: README.md  slowlib.js
webchapow/bench/: index.html
webchapow/bench/results/: chrome130_unk_linux_1.json  chrome146_unk_android10_1.json  moz140_unk_linux_1.json  moz147_unk_linux_1.json  moz148_unk_android13_1.json  moz148_zen4_linux_1.json  moz149_unk_android15_1.json  moz149_unk_android15_2.json  moz149_unk_android15_3.json  moz149_unk_linux_1.json  moz149_unk_linux_2.json  safari537_36_win10_1.json  safari604_unk_ios18_6_1.json
